working towards title edit

--- a/app/navbar.html
+++ b/app/navbar.html
@@ -9,7 +9,7 @@
         <span class='icon-bar'></span>
       </button>
 
-      <a class='navbar-brand' href='#'><img src='assets/img/cube-32.png'> Flashcards</a>
+      <a class='navbar-brand' href='#'><img src='assets/img/cube-32.png'> brain.cards</a>
     </div>
     <div class='collapse navbar-collapse' id='bs-example-navbar-collapse-1'>
       <ul id='main-navbar' class='nav navbar-nav navbar-left'>
