--- a/app/navbar.html
+++ b/app/navbar.html
@@ -1,6 +1,5 @@
 <nav class='navbar navbar-default main-navigation' role='navigation'>
   <div class='container'>
-    <!-- Brand and toggle get grouped for better mobile display -->
     <div class='navbar-header'>
       <button type='button' class='navbar-toggle collapsed' data-toggle='collapse' data-target='#bs-example-navbar-collapse-1'>
         <span class='sr-only'>Toggle navigation</span>
@@ -8,7 +7,6 @@
         <span class='icon-bar'></span>
         <span class='icon-bar'></span>
       </button>
-
       <a class='navbar-brand' href='#'><img src='assets/img/cube-32.png'> brain.cards</a>
     </div>
     <div class='collapse navbar-collapse' id='bs-example-navbar-collapse-1'>
@@ -18,7 +16,9 @@
       </ul>
       <ul class='nav navbar-nav navbar-right'>
         <li id='nav-local'><a href='#local'>My Decks <span class='badge'></span></a></li>
+        <li><button class='btn navbar-btn btn-default'>login</button></li>
+        <li><button class='btn navbar-btn btn-default'>register</button></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container -->
-</nav>
+</nav><!-- /.navbar -->
